--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "firebase": "^9.17.1"
+    "expo": "^47.0.13",
+    "firebase": "^9.17.1",
+    "react": "^18.2.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-47.0.0.tar.gz"
   }
 }
