--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.13",
     "expo": "^47.0.13",
     "firebase": "^9.17.1",
     "react": "^18.1.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-47.0.0.tar.gz",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native": "^0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
+    "react-native-vector-icons": "^9.2.0"
   }
 }
