--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^17.3.0",
+    "@react-native-firebase/firestore": "^17.3.0",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.13",
     "expo": "^47.0.13",
