--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.13",
     "expo": "^47.0.13",
+    "expo-dev-client": "~2.0.1",
     "firebase": "^9.17.1",
     "react": "^18.1.0",
     "react-native": "^0.70.5",
