--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@expo/webpack-config": "^0.17.4",
     "@firebase/app": "^0.9.3",
+    "@mui/material": "^5.11.12",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/firestore": "^17.3.1",
