--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/stack": "^6.3.13",
     "expo": "^47.0.13",
     "expo-dev-client": "~2.0.1",
+    "expo-location": "~15.0.1",
+    "expo-task-manager": "~11.0.1",
     "firebase": "^9.17.1",
     "firebase-auth": "^0.1.2",
     "native-base": "^3.4.28",
