--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.13",
-    "expo": "^47.0.13",
+    "expo": "^47.0.14",
     "expo-dev-client": "~2.0.1",
     "firebase": "^9.17.1",
     "firebase-auth": "^0.1.2",
@@ -20,6 +20,7 @@
     "react-dom": "18.1.0",
     "react-native": "^0.70.5",
     "react-native-autocomplete-input": "^5.3.2",
+    "react-native-communications": "^2.2.1",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
