--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/firestore": "^17.3.1",
     "@react-navigation/bottom-tabs": "^6.5.5",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.13",
     "convert-units": "^2.3.4",
